# hsom

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
src/hsom/: hsom.py
