[metadata]
name = hsom
version = attr: hsom.0.1.0
author = Max Peeperkorn
author_email = post@maxpeeperkorn.nl
description = TODO
long_description = file: README.md, LICENSE.rst
keywords = habituation synapse, self-organising map, novelty detection
license = BSD 3-Clause License
classifiers =
    "Programming Language :: Python :: 3"

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    numpy
package_dir =
    =src

[options.packages.find]
where = src
exclude =
    examples*
    hsom.tests*

[options.package_data]
* = *.txt, *.rst, *.md

[options.entry_points]
console_scripts =
    hsom = hsom.__main__:main

[pep8]
ignore = E41
max-line-length = 100

[tool:pytest]
addopts = -ra -q
testpaths = tests

